Fixed spacing

--- a/bountiful-foods/css/small.css
+++ b/bountiful-foods/css/small.css
@@ -19,7 +19,7 @@ h1 {
     margin: 0;
 }
 h2 {
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin: 0;
 }
 
@@ -180,9 +180,9 @@ header {
 #weather {
     color: var(--accent-color);
     background-color: var(--primary-color);
-    height: 300px;
+    height: 330px;
     display: grid;
-    grid-template-columns: var(--gap) repeat(2, 1fr var(--gap));
+    grid-template-columns: var(--gap) 2fr var(--gap) 3fr var(--gap);
     grid-template-rows: var(--gap) repeat(2, 40px) var(--gap) repeat(2, 1fr var(--gap));
 }
 
@@ -215,51 +215,71 @@ header {
 #weather-forcast {
     grid-column: 4;
     grid-row: 3/8;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr var(--gap)) 1fr;
 }
 
-#order {
+#day1 {
+    grid-row: 1;
+}
+
+#day2 {
+    grid-row: 3;
+}
+
+#day3 {
+    grid-row: 5;
+}
+
+#orders {
     color: var(--primary-color);
     border: 2px solid var(--secondary-color);
-    height: 350px;
+    height: 370px;
     margin: var(--gap);
     display: grid;
     grid-template-columns: var(--gap) repeat(2, 1fr var(--gap) 2fr var(--gap));
-    grid-template-rows: var(--gap) repeat(3, 1fr .2rem 1fr var(--gap));
+    grid-template-rows: var(--gap) 25px repeat(3, 1fr .2rem 1fr var(--gap));
 }
 
-#order > div > div{
+#orders > div > div{
     border: 1px solid var(--secondary-color);
     height: 100%;
 }
 
+#order-head {
+    grid-column: 1/10;
+    grid-row: 1/3;
+    margin: 0 auto;
+}
+
 #order1 {
     grid-column: 2;
-    grid-row: 2/5;
+    grid-row: 3/6;
 }
 
 #order2 {
     grid-column: 6;
-    grid-row: 2/5;
+    grid-row: 3/6;
 }
 
 #order3 {
     grid-column: 2;
-    grid-row: 6/9;
+    grid-row: 7/10;
 }
 
 #order4 {
     grid-column: 6;
-    grid-row: 6/9;
+    grid-row: 7/10;
 }
 
 #order5 {
     grid-column: 2;
-    grid-row: 10/13;
+    grid-row: 11/14;
 }
 
 #order6 {
     grid-column: 6;
-    grid-row: 10/13;
+    grid-row: 11/14;
 }
 
 @keyframes hero1-ani {
